--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 ﻿{
   "manifest_version": 2,
-  "name": "Pacman Canvas",
-  "version": "1.0.5",
+  "name": "PacIndexer",
+  "version": "1.0.6",
 
-  "short_name": "Pacman Canvas",
+  "short_name": "PacIndexer",
   "description": "An old classic, rewritten in HTML5",
 
-  "author": "Platzh1rsch",
+  "author": "Counterpoint Software",
 
   "icons": {
     "128": "img/icon-128.png"
@@ -15,9 +15,9 @@
   "offline_enabled": true,
 
   "app": {
-    "urls": ["http://pacman.platzh1rsch.ch/"],
+    "urls": ["https://pacindexer.freecluster.eu/"],
     "launch": {
-      "web_url": "http://pacman.platzh1rsch.ch"
+      "web_url": "https://pacindexer.freecluster.eu"
     }
   }
 }
