--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,9 @@
 AddType application/x-web-app-manifest+json .webapp
 AddType application/json .json
 AddCharset ISO-8859-1 .json
+
+RewriteEngine On
+RewriteCond %{HTTP:X-Forwarded-Proto} !https
+RewriteCond %{HTTPS} off
+RewriteCond %{HTTP:CF-Visitor} !{"scheme":"https"}
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
